# XboxController

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  btstack_config.h
doc/: HCI event codes.xlsx  PWM freq.xlsx  Pins.xlsx
examples/: hog_host_demo.c
src/: hog_host.c  hog_host.h  keytable.h  xbox_controller.c  xbox_controller.h
